Modif le "crée par"

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
 
   <footer>
     <div class="container">
-      Générateur de Réponses NationsGlory Black - Crée par ZaZarteg &copy; 2025
+      Générateur de Réponses NationsGlory Black - Crée par NationsgGlory Black &copy; 2025
     </div>
   </footer>
 
@@ -3470,6 +3470,7 @@ function copierReponse(elementId) {
   </script>
 </body>
 </html>
+
 
 
 
